--- a/css/style.css
+++ b/css/style.css
@@ -103,6 +103,20 @@ img {
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
 
+.slogan1 {
+    background-color: green;
+    color: white;
+    width: 90px;
+    height: 30px;
+    padding: 5px;
+    position: absolute;
+    left: 0px;
+    bottom: 30px;
+    text-align: center;
+    line-height: 20px;
+}
+
+
 /* fine main botton */
 
 
